# scannit-core

./: Cargo.toml  README.md  azure-pipelines.yml  publish.ps1
scannit-cli/: Cargo.toml
scannit-cli/src/: main.rs
scannit-core-cli/: Cargo.toml
scannit-core-cli/src/: main.rs
scannit-core-ffi/: Cargo.toml
scannit-core-ffi/src/: ffi.rs  lib.rs  models.rs
src/: conversion.rs  desfire.rs  en1545date.rs  eticket.rs  history.rs  lib.rs  models.rs  travelcard.rs
src/tests/: dummy.rs
