[package]
name = "scannit-core"
version = "0.1.0"
authors = ["Neil McAlister <mcalistern@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
chrono-tz = "0.5"
lazy_static = "1.3.0"
byteorder = "1"

[workspace]
members = ["scannit-core-ffi"]