[package]
name = "scannit-core"
description = "A library for reading Helsinki HSL's travel cards."
version = "0.1.0"
authors = ["Neil McAlister <mcalistern@gmail.com>"]
license = "MIT"
repository = "https://github.com/pingzing/scannit-core/"
edition = "2018"

exclude = [
    ".vscode/*",
    ".gitignore",
]

#NOTE: In order to build for Android, the NDK must be installed, and a machine-wide 
# .cargo/config should be created that has Cargo directives for where to find 'ar' and a linker
# for each Android target triple.

[dependencies]
chrono = "0.4"
chrono-tz = "0.5"
lazy_static = "1.3.0"
num-traits = "0.2"

[workspace]
members = ["scannit-core-ffi", "scannit-core-cli"]