[package]
name = "scannit-core-cli"
version = "0.1.0"
authors = ["Neil McAlister <mcalistern@gmail.com>"]
edition = "2018"

[dependencies]
scannit-core = {path = "../"}

# Required for the CLI example to actually read a smart card.
# Note: Requires libpcsclite-dev which often has to be explicitly installed on Linux.
pcsc = "2"